--- a/css/custom.css
+++ b/css/custom.css
@@ -17,19 +17,25 @@ body {
   margin-right: auto;
 }
 
+.container-contact-us {
+  max-width: 40rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #map {
   height: 868px;
   width: 100%;
 }
 
 .background-container {
-  background-color: rgba(0, 0, 0, 0.5) !important; 
+  background-color: rgba(0, 0, 0, 0.5) !important;
   height: 100%;
   width: auto;
-  z-index: 999 ;
+  z-index: 999;
 }
 
-.background-image{
+.background-image {
   background-image: url(/img/image.png);
   background-position: center;
   background-repeat: repeat;
@@ -37,66 +43,75 @@ body {
 
 /*  */
 
-.home .carousel-item{
-	min-height: 100vh;
-	background-position: center;
-	background-size: cover;
-	position: relative;
-	z-index: 1;
+.home .carousel-item {
+  min-height: 70vh;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
 }
-.home .carousel-item:before{
-	content: '';
-	position: absolute;
-	left:0;
-	top:0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.5);
-	z-index: -1;
+.home .carousel-item:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
-.home .carousel-item .container{
-	position: absolute;
-	left: 50%;
-	top:50%;
-	transform: translate(-50%,-50%);
-	text-align: center;
+.home .carousel-item .container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
-.home .carousel-item h2{
-	font-size: 80px;
-	color: #ffffff;
-	margin:0 0 10px;
-	opacity: 0;
+.home .carousel-item h2 {
+  font-size: 80px;
+  color: #ffffff;
+  margin: 0 0 10px;
+  opacity: 0;
 }
-.home .carousel-item p{
-	font-size: 30px;
-	margin:0;
-	color: #eeeeee;
-	opacity:0;
+.home .carousel-item p {
+  font-size: 30px;
+  margin: 0;
+  color: #eeeeee;
+  opacity: 0;
 }
-.home .carousel-item.active h2{
-	animation: fadeInLeft 0.5s ease forwards;
+.home .carousel-item.active h2 {
+  animation: fadeInLeft 0.5s ease forwards;
 }
-.home .carousel-item.active p{
-	animation: fadeInRight 0.5s ease forwards;
+.home .carousel-item.active p {
+  animation: fadeInRight 0.5s ease forwards;
 }
 
-@keyframes fadeInLeft{
-	0%{
-		opacity: 0;
-		transform: translateX(-30px);
-	}
-	100%{
-		opacity: 1;
-		transform: translateX(0px);
-	}
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
-@keyframes fadeInRight{
-	0%{
-		opacity: 0;
-		transform: translateX(30px);
-	}
-	100%{
-		opacity: 1;
-		transform: translateX(0px);
-	}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+/* Background Container */
+
+.bg-container-img {
+  height: 60vh;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
