--- a/css/custom.css
+++ b/css/custom.css
@@ -36,7 +36,7 @@ body {
 }
 
 .background-image {
-  background-image: url(/img/image.png);
+  background-image: url(img/image.png);
   background-position: center;
   background-repeat: repeat;
 }
