--- a/css/custom.css
+++ b/css/custom.css
@@ -2,14 +2,6 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-/* To top Button */
-#btn-back-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  display: none;
-}
-
 /* */
 .container-contact-map {
   max-width: 29rem;
@@ -108,4 +100,11 @@ body {
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.visit-img-bg {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  width: 100%;
+  height: 100%;
+  /* border-radius: 10px; */
 }
