Maybe Final changes on design

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,8 @@ body {
 }
 
 #map {
-  height: 868px;
+  height: 100%;
+  min-height: 500px;
   width: 100%;
 }
 
@@ -107,4 +108,13 @@ body {
   width: 100%;
   height: 100%;
   /* border-radius: 10px; */
+}
+
+.contact-us-bg {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.4)
+  ) !important;
+  z-index: 999;
 }
